add post and patch examples
